# pr-review-runner

./: .dockerignore  .gitignore  Dockerfile  LICENSE  NOTICE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: design.md
pr_review_runner/: __init__.py  __main__.py  config.py  description.py  description_runner.py  discussion.py  events.py  github.py  main.py  review.py  upstream.py
tests/: test_config.py  test_description.py  test_description_runner.py  test_discussion.py  test_events.py  test_github.py  test_main.py  test_review.py  test_upstream.py  test_version.py
